--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/freshvotes?servertimezone=UTC
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.username = root
+spring.datasource.password = 
 
+spring.jpa.database-platform = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.thymeleaf.cache = false
